# cosmic-applet-workspaces

./: .gitignore  COSMIC_INTEGRATION.md  Cargo.toml  DEVELOPMENT.md  DEV_SETUP.md  FAQ.md  INSTALLATION.md  QUICK_FIX.md  README.md  SOLUTIONS_SUMMARY.md  flake.nix
.github/: copilot-instructions.md
data/: cosmic-applet-workspaces.desktop
data/dbus-1/: org.Cosmic.Applet.Workspaces.xml
data/systemd/: cosmic-applet-workspaces.service  org.Cosmic.Applet.Workspaces.service
src/: dbus_interface.rs  main.rs  workspace_manager.rs
