[package]
name = "cosmic-applet-workspaces"
version = "1.0.0"
edition = "2021"

[dependencies]
# Cosmic UI Framework - CORE DEPENDENCY
cosmic = { git = "https://github.com/pop-os/libcosmic.git" }
iced = { git = "https://github.com/pop-os/iced.git" }
iced_core = { git = "https://github.com/pop-os/iced.git" }
iced_runtime = { git = "https://github.com/pop-os/iced.git" }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

# D-Bus for system integration
zbus = { version = "4", features = ["tokio"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Futures utilities
futures = "0.3"

[features]
default = []
dbus-interface = []

[[bin]]
name = "cosmic-applet-workspaces"
path = "src/main.rs"
